# xboard

./: .clang-format  .gitattributes  .gitignore  Makefile.am  README  args.h  backend.c  backend.h  backendz.h  board.c  board.h  book.c  childio.c  childio.h  cmail.in  common.h  configure.ac  dialogs.c  dialogs.h  draw.c  draw.h  engineoutput.c  engineoutput.h  evalgraph.c  evalgraph.h  frontend.h  gamelist.c  gettext.h  history.c  index.html  lists.c  lists.h  menus.c  menus.h  moves.c  moves.h  nengineoutput.c  nevalgraph.c  ngamelist.c  nhistory.c  (+10 more)
build-aux/: .gitignore
gtk/: button_labels.c  button_labels.h  xboard.c  xboard.h  xengineoutput.c  xoptions.c  xtimer.c
m4/: .gitignore
po/: .gitignore  LINGUAS  Makevars  da.po  de.po  es.po  fr.po  it.po  ka.po  nl.po  pl.po  ro.po  sr.po  sv.po  uk.po  vi.po  xboard.pot  zh_CN.po  zh_TW.po
winboard/: .gitignore  COMPILING  config.h  defaults.h  help.c  help.h  internationalize  jaws.c  language.txt  makefile  makefile.gcc  resource.h  wchat.c  wclipbrd.c  wclipbrd.h  wedittags.c  wengineoutput.c  wevalgraph.c  wgamelist.c  whistory.c  winboard.c  winboard.h  winboard.rc  winboard.sln  winboard.vcxproj  winboard.vcxproj.filters  wlayout.c  woptions.c  woptions.h  wsettings.c  wsnap.c  wsnap.h  wsockerr.c  wsockerr.h
winboard/bitmaps/: convert.c
xaw/: xboard.c  xboard.h  xengineoutput.c  xgamelist.c  xgamelist.h  xhistory.c  xhistory.h  xoptions.c
